[package]
name = "sdf"
version = "0.1.2"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
description = "Read Riegl's .sdf full-waveform LiDAR data format"
documentation = "http://gadomski.github.io/sdf-rs"
homepage = "https://github.com/gadomski/sdf-rs"
repository = "https://github.com/gadomski/sdf-rs.git"
readme = "README.md"
keywords = ["pointcloud", "LiDAR", "full-waveform"]
license = "MIT"
exclude = ["data/*"]

[[bin]]
name = "sdf"
doc = false

[dependencies]
docopt = "0.6"
env_logger = "0.3"
libc = "0.2"
log = "0.3"
peakbag = "0.1"
rustc-serialize = "0.3"

[profile.test]
opt-level = 2
